<resources>
    <string name="app_name">To Do List</string>
    <string name="quest">Quest</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="signup_text">Sign up to get started.</string>
    <string name="sign_in_text">Let\'s continue the journey.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email_username">Username/Email</string>
    <string name="already">Already have an account? </string>
    <string name="dont_have">Don\'t have an account? </string>
    <string name="signup_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome">Welcome!</string>
    <string name="good_to_see">Good to see you!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="task_fragment">Tasks Fragment</string>
    <string name="notes_fragment">Notes Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="hello">Hello!</string>
    <string name="today_task">Your today\'s task</string>
    <string name="almost_done">almost done!</string>
    <string name="low_task">is far from finish!</string>
    <string name="view_task">View Task</string>
    <string name="inProgress">In Progress</string>
    <string name="task_groups">Task Groups</string>
    <string name="office_project">Office Project</string>
    <string name="personal_project">Personal Project</string>
    <string name="daily_project">Daily Project</string>r
    <string name="groceries">Grocery shopping app design</string>
    <string name="uber">Uber eat design challenge</string>
    <string name="project_name">Project Name</string>
    <string name="description">Task Description</string>
    <string name="new_project">New Project</string>
    <string name="add_project">Add Project</string>
    <string name="_40">40%</string>
    <string name="dashboard">Dashboard</string>
    <string name="task">Task</string>
    <string name="notes">Notes</string>
    <string name="profile">Profile</string>
    <string name="add_project1">Add Project</string>
</resources>