<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".NewTaskSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_project"
            android:textColor="@color/blue"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp"
        app:cardMaxElevation="20dp"
        app:cardElevation="5dp"
        android:backgroundTint="@color/edt_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addNameTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/blue"
            android:hint="@string/project_name"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp"
        app:cardMaxElevation="20dp"
        app:cardElevation="5dp"
        android:backgroundTint="@color/edt_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/blue"
                android:hint="@string/description"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSaveProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edt_color"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_project"
        android:textColor="@color/black"
        android:layout_marginEnd="50dp"/>

</LinearLayout>

