<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/let_s_start__1_"
    android:paddingTop="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_to_see"
                android:textSize="35sp"
                android:fontFamily="@font/axiforma_medium"
                android:textColor="@color/blue"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:fontFamily="@font/axiforma_regular"/>


            <ImageView
                android:layout_width="200dip"
                android:layout_height="250dp"
                android:paddingTop="30dp"
                android:src="@drawable/tech_life_life_management"/>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:paddingTop="30dp">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/email_username"-->
<!--                android:textColor="@color/blue"-->
<!--                android:textStyle="bold"-->
<!--                android:fontFamily="@font/axiforma_medium"-->
<!--                android:textSize="15sp"/>-->

<!--            <EditText-->
<!--                android:id="@+id/edtName1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="55dp"-->
<!--                android:hint="John Doe or jj5@gmail.com"-->
<!--                android:ems="10"-->
<!--                android:elevation="3dp"-->
<!--                android:background="@drawable/edit_background"-->
<!--                android:drawableStart="@drawable/ic_baseline_person_24"-->
<!--                android:paddingStart="10dp"-->
<!--                android:drawablePadding="10dp"-->
<!--                tools:ignore="RtlSymmetry" />-->


<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingTop="20dp"-->
<!--                android:text="@string/password"-->
<!--                android:textColor="@color/blue"-->
<!--                android:textStyle="bold"-->
<!--                android:fontFamily="@font/axiforma_medium"-->
<!--                android:textSize="15sp"/>-->

<!--            <EditText-->
<!--                android:id="@+id/edtPassword1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="55dp"-->
<!--                android:hint="********"-->
<!--                android:inputType="textPassword"-->
<!--                android:elevation="3dp"-->
<!--                android:ems="10"-->
<!--                android:background="@drawable/edit_background"-->
<!--                android:drawableStart="@drawable/ic_baseline_lock_24"-->
<!--                android:paddingStart="10dp"-->
<!--                android:paddingEnd="10dp"-->
<!--                android:drawablePadding="10dp"-->
<!--                tools:ignore="RtlSymmetry" />-->


<!--        </LinearLayout>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:text="@string/email"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:fontFamily="@font/axiforma_medium"
            android:textSize="15sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/black"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            app:endIconTint="@color/black"
            app:helperTextEnabled="true"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:background="@drawable/edit_background"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:text="@string/password"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:fontFamily="@font/axiforma_medium"
            android:textSize="15sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/black"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:helperTextEnabled="true"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="15">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:background="@drawable/edit_background"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/axiforma_medium"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="@string/dont_have"
                android:fontFamily="@font/axiforma_regular"/>

            <TextView
                android:id="@+id/txtSign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/blue"
                android:clickable="true"
                android:textStyle="bold"
                android:fontFamily="@font/axiforma_medium"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
